--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -174,6 +174,18 @@
   </div>
 </div>
 
+<div class="separador"></div>
+
+<div class="content">
+  <div class="container">
+    <div class="new-group row feature">
+      <div class="col-md-12 col-sm-12 text-center">
+        <%= render 'person/form' %>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div id="map" class="map-container">
   <div class="row">
     <div class="col-md-12">
