text centered on application form

--- a/app/views/person/_form.html.erb
+++ b/app/views/person/_form.html.erb
@@ -1,5 +1,5 @@
 <h3 class="feature">Inscrição</h3>
-<p class="text-left">
+<p class="text-center">
   Registre seu grupo para participar da inauguração do Templo do Chile.
 </p>
 
