--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -16,7 +16,6 @@
       <a class="mdl-navigation__link" href="#ft1" onClick="toggle_drawer();">Templo</a>
       <a class="mdl-navigation__link" href="#ft2" onClick="toggle_drawer();">Comunidade</a>
       <a class="mdl-navigation__link" href="#ft3" onClick="toggle_drawer();">Inauguração</a>
-      <a class="mdl-navigation__link" href="#" onClick="toggle_drawer();">Blog</a>
       <a class="mdl-navigation__link" href="#map" onClick="toggle_drawer();">Contato</a>
     </nav>
   </div>
@@ -178,7 +177,7 @@
 
 <div class="content">
   <div class="container">
-    <div class="new-group row feature">
+    <div class="person-group new-group row feature">
       <div class="col-md-12 col-sm-12 text-center">
         <%= render 'person/form' %>
       </div>
@@ -240,7 +239,6 @@
             <li><a class="mdl-navigation__link" href="#">Templo</a></li>
             <li><a class="mdl-navigation__link" href="#">Comunidade</a></li>
             <li><a class="mdl-navigation__link" href="#">Inauguração</a></li>
-            <li><a class="mdl-navigation__link" href="#">Blog</a></li>
             <li><a class="mdl-navigation__link" href="#">Contato</a></li>
           </ol>
         </li>
