--- a/app/views/person/_form.html.erb
+++ b/app/views/person/_form.html.erb
@@ -1,4 +1,4 @@
-<h3 class="feature">Inscrição</h3>
+<h3 class="person">Inscrição</h3>
 <p class="text-center">
   Registre seu grupo para participar da inauguração do Templo do Chile.
 </p>
