--- a/app/assets/stylesheets/stylesheet.css
+++ b/app/assets/stylesheets/stylesheet.css
@@ -82,7 +82,6 @@ element {
   color: #ECD779;
 }
 
-
 /* --------------------- HEADER ---------------------*/
 /* header-container e video-container */
 .header-container{
@@ -100,7 +99,7 @@ element {
 	left: 0%;
 	height: auto;
 	width: 100%;
-	
+
 }
 
 .header-video{
@@ -221,14 +220,22 @@ img.feature{
 }
 
 div.feature{
+	position: relative;
 	padding-top: 5%;
 	padding-bottom: 30px;
-	vertical-align: middle;
+	bottom: 0px;
+}
+
+div.linha{
+	border-bottom: 0.1em #A58E26 dotted;
 }
 
 img.feature-xs{
-	width: 50%;
+	position: relative;
+	width: 25%;
 	height:auto;
+	bottom: 0px;
+	margin-top: 15px;
 }
 
 h3.feature{
@@ -250,7 +257,7 @@ div.separador{
 .map-container{
 	/*background-color: #57729C;*/
 	background-color: #ECD779;
-	
+
 	margin-bottom:5%;
 	padding-top: 20px;
 	padding-bottom: 5%;
