--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -27,7 +27,7 @@
   <div class="header-container hidden-xs">
     <div class="video-container">
       <video class="header-video" preload="true" autoplay="autoplay" loop="loop" volume="0" poster="assets/templo.jpg">
-        <source src="assets/templo.mp4" type="video/mp4"/>
+        <source src="assets/templo.mp4" type="video/mp4">
       </video>
     </div>
     <h1 class="titulo amarelo-super-claro alpha20">Templo Bahá'í da América do Sul</h1>
@@ -70,10 +70,10 @@
 
       <!-- Mobile -->
       <div class="row feature visible-xs">
-        <div class="col-xs-4">
+        <div class="col-xs-12 centro">
           <img src="assets/square.png" class="img-circle img-responsive center-block feature-xs">
         </div>
-        <div class="col-xs-8 centro">
+        <div class="col-xs-12 centro">
           <h3 class="feature">Construindo Comunidades</h3>
         </div>
       </div>
@@ -112,10 +112,10 @@
 
       <!--Mobile-->
       <div class="row feature visible-xs">
-        <div class="col-xs-4">
+        <div class="col-xs-12 centro">
           <img src="assets/square.png" class="img-circle img-responsive center-block feature-xs">
         </div>
-        <div class="col-xs-8 centro">
+        <div class="col-xs-12 centro">
           <h3 class="feature">Construindo Comunidades</h3>
         </div>
       </div>
@@ -154,10 +154,10 @@
 
       <!-- Mobile -->
       <div class="row feature visible-xs">
-        <div class="col-xs-4">
+        <div class="col-xs-12 centro">
           <img src="assets/square.png" class="img-circle img-responsive center-block feature-xs">
         </div>
-        <div class="col-xs-8 centro">
+        <div class="col-xs-12 centro">
           <h3 class="feature">Construindo Comunidades</h3>
         </div>
       </div>
@@ -173,14 +173,10 @@
   </div>
 </div>
 
-<div class="separador"></div>
-
 <div class="content">
-  <div class="container">
-    <div class="person-group new-group row feature">
-      <div class="col-md-12 col-sm-12 text-center">
-        <%= render 'person/form' %>
-      </div>
+  <div class="person-group new-group row feature">
+    <div class="col-md-12 col-sm-12 text-center">
+      <%= render 'person/form' %>
     </div>
   </div>
 </div>
@@ -245,12 +241,12 @@
       </ol>
     </div>
   </div>
+</div>
 
-  <!-- Copyright -->
-  <div class="row">
-    <div class="container-fluid col-lg-12 col-md-12 col-sm-12 col-xs-12 copyright">
-      2015 &copy; Comunidade Bahá'í do Brasil
-    </div>
+<!-- Copyright -->
+<div class="row">
+  <div class="container-fluid col-lg-12 col-md-12 col-sm-12 col-xs-12 copyright">
+    2015 &copy; Comunidade Bahá'í do Brasil
   </div>
 </div>
 
