--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"/>
-  <link rel="stylesheet" href="assets/stylesheet.css"/>
+  <link rel="stylesheet" href="assets/home.css"/>
   <script src="https://storage.googleapis.com/code.getmdl.io/1.0.4/material.min.js"></script>
 </head>
 
