Adds some styles to the groups form

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -30,12 +30,12 @@
         <source src="assets/templo.mp4" type="video/mp4">
       </video>
     </div>
-    <h1 class="titulo amarelo-super-claro alpha20">Templo Bahá'í da América do Sul</h1>
+    <h1 class="titulo amarelo-super-claro alpha40">Templo Bahá'í da América do Sul</h1>
   </div>
 
   <!-- Header com jumbotron  (para mobile)  -->
   <div class="jumbotron mobile-bg visible-xs">
-    <h1 class="titulo-mobile alpha20">Templo Bahá'í da América do Sul</h1>
+    <h1 class="titulo-mobile alpha40">Templo Bahá'í da América do Sul</h1>
   </div>
 </div>
 
@@ -173,7 +173,7 @@
   </div>
 </div>
 
-<div class="content">
+<div class="content group-container">
   <div class="person-group new-group row feature">
     <div class="col-md-12 col-sm-12 text-center">
       <%= render 'person/form' %>
