Validates person email and name

--- a/app/views/person/_form.html.erb
+++ b/app/views/person/_form.html.erb
@@ -16,7 +16,7 @@
       </span>
 
       <span class="field">
-        <%= p.text_field :email, class: "email", placeholder: 'E-mail' %>
+        <%= p.email_field :email, class: "email", placeholder: 'E-mail' %>
       </span>
       <%= p.link_to_remove "", class: "btn btn-danger glyphicon glyphicon-remove" %>
     </div>
