Includes internal and external links

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -219,10 +219,10 @@
         <li class="title">Comunidade Bahá'í</li>
         <li>
           <ol class="list-unstyled">
-            <li><a class="mdl-navigation__link" href="#">Comunidade Bahá'í do Brasil</a></li>
-            <li><a class="mdl-navigation__link" href="#">Comunidade Bahá'í do Chile</a></li>
-            <li><a class="mdl-navigation__link" href="#">Comunidade Bahá'í Internacional</a></li>
-            <li><a class="mdl-navigation__link" href="#">Site do Templo do Chile</a></li>
+            <li><a class="mdl-navigation__link" href="http://www.bahai.org.br/" target="blank">Comunidade Bahá'í do Brasil</a></li>
+            <li><a class="mdl-navigation__link" href="http://www.bahai.cl/" target="blank">Comunidade Bahá'í do Chile</a></li>
+            <li><a class="mdl-navigation__link" href="http://www.bahai.org/" target="blank">Comunidade Bahá'í Internacional</a></li>
+            <li><a class="mdl-navigation__link" href="http://templo.bahai.cl/" target="blank">Site do Templo do Chile</a></li>
           </ol>
         </li>
       </ol>
@@ -232,10 +232,10 @@
         <li class="title">Mapa do site</li>
         <li>
           <ol class="list-unstyled">
-            <li><a class="mdl-navigation__link" href="#">Templo</a></li>
-            <li><a class="mdl-navigation__link" href="#">Comunidade</a></li>
-            <li><a class="mdl-navigation__link" href="#">Inauguração</a></li>
-            <li><a class="mdl-navigation__link" href="#">Contato</a></li>
+            <li><a class="mdl-navigation__link" href="#ft1">Templo</a></li>
+            <li><a class="mdl-navigation__link" href="#ft2">Comunidade</a></li>
+            <li><a class="mdl-navigation__link" href="#ft3">Inauguração</a></li>
+            <li><a class="mdl-navigation__link" href="#map">Contato</a></li>
           </ol>
         </li>
       </ol>
