--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -50,6 +50,7 @@
     <%= render partial: 'feature', locals: {
       id: 'ft1',
       image_side: 'left',
+      image_name: 'lotus-temple.jpg',
       title: "O Templo Bahá'í",
       content: [
         {
@@ -66,6 +67,7 @@
     <%= render partial: 'feature', locals: {
       id: 'ft2',
       image_side: 'right',
+      image_name: 'sunset.jpg',
       title: "A Inauguração do Templo da América do Sul",
       content: [
         'Os eventos associados com a histórica inauguração da Casa de Adoração da América do Sul, localizada em Santiago, Chile, ocorrerão no período de 13 a 16 de outubro de 2016.',
@@ -80,6 +82,7 @@
     <%= render partial: 'feature', locals: {
       id: 'ft3',
       image_side: 'left',
+      image_name: 'junior_youth.jpg',
       title: "Oração e serviço",
       content: [
         'Assim como o corpo humano necessita nutrir-se para seu desenvolvimento, a oração regular provê alimento espiritual que sustenta a vida do espírito. Tal como o orvalho da manhã, ela traz frescor ao coração e o limpa, purificando-o dos apegos ao ego insistente. É também a conversação espiritual essencial da alma com seu Criador, íntima e sem intermediários, oferecendo a oportunidade de buscar Sua ajuda, refletir sobre o significado e propósito da vida, ansiar por Sua guia, ou simplesmente expressar amor e agradecimento genuínos.',
@@ -103,6 +106,7 @@
     <%= render partial: 'feature', locals: {
       id: 'ft4',
       image_side: 'right',
+      image_name: 'prayer.jpg',
       title: "Construção de comunidades e o Templo",
       content: [
         'O emergir gradual de uma consciência sobre a realidade espiritual do ser humano, sua aspiração natural à transcendência; os impulsos da alma em busca de conexão com o sagrado através da prece e do serviço ao próximo.',
@@ -117,16 +121,10 @@
     <%= render partial: 'feature', locals: {
       id: 'ft5',
       image_side: 'left',
+      image_name: 'rezando.jpg',
       title: "O poder da prece sincera",
       content: [
         'A <a target="blank" href="http://www.bahai.org.br/oracoes">prece</a> é a conversação espiritual essencial da alma com seu Criador, direta e sem intermediação. É o alimento espiritual que sustenta a vida do espírito. Tal como o orvalho da manhã, ela traz frescor ao coração e o limpa, purificando-o dos apegos ao ego insistente. É um fogo que queima os véus e uma luz que conduz ao oceano da reunião com o Todo-Poderoso. Nas suas asas, a alma voa nos céus divinos e achega-se à realidade divina. De sua qualidade depende o desenvolvimento das capacidades ilimitadas da alma e a atração das graças de Deus, mas prolongar a prece não é desejável. Os poderes latentes na prece são manifestos quando ela é motivada por amor a Deus, afastado de qualquer temor ou favor, e livre de ostentação e superstição. Devem ser expressos com um coração puro e sincero que conduza a contemplação e meditação, de modo que a faculdade do raciocínio possa ser iluminada pelos seus efeitos. Tal prece transcenderá a limitação das palavras e irá bem além de meros sons. A doçura de suas melodias deve alegrar e elevar o coração e reforçar o poder penetrante da Palavra, transmutando inclinações mundanas em atributos celestiais e inspirando serviço abnegado à humanidade.',
-        '',
-        '',
-        '',
-        {
-          quote: '',
-          quote_author: "Escrituras bahá'ís",
-        }
       ],
     } %>
 
@@ -135,6 +133,7 @@
     <%= render partial: 'feature', locals: {
       id: 'ft6',
       image_side: 'right',
+      image_name: 'bahais.jpg',
       title: "A Fe Bahá’í",
       content: [
         {
