Changes the navigation links

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,10 +13,12 @@
   <div class="mdl-layout__drawer">
     <span class="mdl-layout-title">Menu</span>
     <nav class="mdl-navigation">
-      <a class="mdl-navigation__link" href="#ft1" onClick="toggle_drawer();">Templo</a>
-      <a class="mdl-navigation__link" href="#ft2" onClick="toggle_drawer();">Comunidade</a>
-      <a class="mdl-navigation__link" href="#ft3" onClick="toggle_drawer();">Inauguração</a>
-      <a class="mdl-navigation__link" href="#map" onClick="toggle_drawer();">Contato</a>
+      <a class="mdl-navigation__link" href="#ft1" onClick="toggle_drawer();">O Templo Bahá'í</a>
+      <a class="mdl-navigation__link" href="#ft2" onClick="toggle_drawer();">A Inauguração</a>
+      <a class="mdl-navigation__link" href="#ft3" onClick="toggle_drawer();">Oração e serviço</a>
+      <a class="mdl-navigation__link" href="#ft4" onClick="toggle_drawer();">Construindo comunidades</a>
+      <a class="mdl-navigation__link" href="#ft5" onClick="toggle_drawer();">O poder da prece</a>
+      <a class="mdl-navigation__link" href="#ft6" onClick="toggle_drawer();">A Fe Bahá’í</a>
     </nav>
   </div>
 </div>
@@ -180,10 +182,12 @@
         <li class="title">Mapa do site</li>
         <li>
           <ol class="list-unstyled">
-            <li><a class="mdl-navigation__link" href="#ft1">Templo</a></li>
-            <li><a class="mdl-navigation__link" href="#ft2">Comunidade</a></li>
-            <li><a class="mdl-navigation__link" href="#ft3">Inauguração</a></li>
-            <li><a class="mdl-navigation__link" href="#map">Contato</a></li>
+            <li><a class="mdl-navigation__link" href="#ft1">O Templo Bahá'í</a></li>
+            <li><a class="mdl-navigation__link" href="#ft2">A Inauguração</a></li>
+            <li><a class="mdl-navigation__link" href="#ft3">Oração e serviço</a></li>
+            <li><a class="mdl-navigation__link" href="#ft4">Construindo comunidades</a></li>
+            <li><a class="mdl-navigation__link" href="#ft5">O poder da prece</a></li>
+            <li><a class="mdl-navigation__link" href="#ft6">A Fe Bahá’í</a></li>
           </ol>
         </li>
       </ol>
@@ -192,7 +196,7 @@
 </div>
 
 <!-- Copyright -->
-<div class="row">
+<div>
   <div class="container-fluid col-lg-12 col-md-12 col-sm-12 col-xs-12 copyright">
     2015 &copy; Comunidade Bahá'í do Brasil
   </div>
