Modifies the top bar

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,27 +1,4 @@
-<!-- Menu Principal - Responsivo -->
-<div class="mdl-layout mdl-js-layout">
-  <header class="mdl-layout__header">
-    <div class="mdl-layout__header-row">
-      <span class="mdl-layout-title">Templo da América do Sul</span>
-      <div class="mdl-layout-spacer"></div>
-      <nav class="mdl-navigation">
-        <a class="mdl-navigation__link" href="#ft1" onClick="showBackTop()">Sobre o Templo</a>
-        <a class="mdl-navigation__link" href="#map" onClick="showBackTop()">Contato</a>
-      </nav>
-    </div>
-  </header>
-  <div class="mdl-layout__drawer">
-    <span class="mdl-layout-title">Menu</span>
-    <nav class="mdl-navigation">
-      <a class="mdl-navigation__link" href="#ft1" onClick="toggle_drawer();">O Templo Bahá'í</a>
-      <a class="mdl-navigation__link" href="#ft2" onClick="toggle_drawer();">A Inauguração</a>
-      <a class="mdl-navigation__link" href="#ft3" onClick="toggle_drawer();">Oração e serviço</a>
-      <a class="mdl-navigation__link" href="#ft4" onClick="toggle_drawer();">Construindo comunidades</a>
-      <a class="mdl-navigation__link" href="#ft5" onClick="toggle_drawer();">O poder da prece</a>
-      <a class="mdl-navigation__link" href="#ft6" onClick="toggle_drawer();">A Fe Bahá’í</a>
-    </nav>
-  </div>
-</div>
+<%= render partial: 'top_menu' %>
 
 <!-- Main -->
 <!-- Header com video para desktop e tablet -->
