--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -81,6 +81,36 @@ element {
   color: #ECD779;
 }
 
+.navbar {
+  border-radius: 0;
+  border: 0;
+  margin: 0;
+  background: #57729C;
+
+  .navbar-nav {
+    width: calc(100% - 49px);
+    max-width: 900px;
+    margin: auto;
+    float: none;
+
+    li {
+      text-align: center;
+      width: calc(100%/6 - 49px/6);
+      max-width: 165px;
+
+      a {
+        padding: 15px 0;
+        color: white;
+
+        &:hover {
+          font-weight: 600;
+          color: white;
+        }
+      }
+    }
+  }
+}
+
 /* --------------------- HEADER ---------------------*/
 /* header-container e video-container */
 
