Changes two images

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -61,7 +61,7 @@
     <%= render partial: 'feature', locals: {
       id: 'ft3',
       image_side: 'left',
-      image_name: 'junior_youth.jpg',
+      image_name: 'prayers-and-service.jpg',
       title: "Oração e serviço",
       content: [
         'Assim como o corpo humano necessita nutrir-se para seu desenvolvimento, a oração regular provê alimento espiritual que sustenta a vida do espírito. Tal como o orvalho da manhã, ela traz frescor ao coração e o limpa, purificando-o dos apegos ao ego insistente. É também a conversação espiritual essencial da alma com seu Criador, íntima e sem intermediários, oferecendo a oportunidade de buscar Sua ajuda, refletir sobre o significado e propósito da vida, ansiar por Sua guia, ou simplesmente expressar amor e agradecimento genuínos.',
@@ -85,7 +85,7 @@
     <%= render partial: 'feature', locals: {
       id: 'ft4',
       image_side: 'right',
-      image_name: 'prayer.jpg',
+      image_name: 'community-building.jpg',
       title: "Construção de comunidades e o Templo",
       content: [
         'O emergir gradual de uma consciência sobre a realidade espiritual do ser humano, sua aspiração natural à transcendência; os impulsos da alma em busca de conexão com o sagrado através da prece e do serviço ao próximo.',
