--- a/app/views/home/_top_menu.html
+++ b/app/views/home/_top_menu.html
@@ -18,6 +18,7 @@
         <li><a href="#ft4">Comunidade</a></li>
         <li><a href="#ft5">O poder da prece</a></li>
         <li><a href="#ft6">A Fe Bahá’í</a></li>
+        <li id="inscription"><a href="http://dedicacionbahai.playdigital.cl/incripcion-2-2/" target="blank">Inscrição</a></li>
       </ul>
     </div>
   </div>
