--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -131,7 +131,7 @@
         <div class="col-md-12 col-sm-12 text-center">
           <h3 class="feature">Inscrição</h3>
             <p class="text-center">
-              Para inscrever-se para a inauguração do templo, acesse <a href="http://templo.bahai.cl/dedicacion/">http://templo.bahai.cl/dedicacion/</a>
+              Para inscrever-se para a inauguração do templo, acesse <a href="http://templo.bahai.cl/dedicacion/" target="blank">http://templo.bahai.cl/dedicacion/</a>
             </p>
         </div>
       </div>
