Changes the video for an image slider (carousel)

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,23 +1,8 @@
 <%= render partial: 'top_menu' %>
+<%= render partial: 'carousel' %>
 
 <!-- Main -->
 <!-- Header com video para desktop e tablet -->
-<div id="topo">
-  <div class="header-container hidden-xs">
-    <div class="video-container">
-      <video class="header-video" preload="true" autoplay="autoplay" loop="loop" volume="0" poster="assets/templo.jpg">
-        <source src="assets/templo.mp4" type="video/mp4">
-      </video>
-    </div>
-    <h1 class="titulo amarelo-super-claro alpha40">Templo Bahá'í da América do Sul</h1>
-  </div>
-
-  <!-- Header com jumbotron  (para mobile)  -->
-  <div class="jumbotron mobile-bg visible-xs">
-    <h1 class="titulo-mobile alpha40">Templo Bahá'í da América do Sul</h1>
-  </div>
-</div>
-
 <div class="content">
   <blockquote class="mainquote baroque">
     A prece é a conversação espiritual essencial da alma com o seu Criador, direta e sem intermediação. É o alimento espiritual que sustenta a vida do espírito. (...) Nas suas asas, a alma voa nos céus divinos e achega-se à realidade divina.
