--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -85,7 +85,10 @@ element {
   border-radius: 0;
   border: 0;
   margin: 0;
-  background: #57729C;
+
+  &, .navbar-header {
+    background: #57729C;
+  }
 
   .navbar-nav {
     width: calc(100% - 49px);
@@ -95,6 +98,23 @@ element {
 
     li {
       text-align: center;
+
+      a {
+        padding: 15px 0;
+        color: black;
+
+        &:hover {
+          font-weight: 600;
+          color: black;
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: 768px) {
+  .navbar {
+    .navbar-nav li {
       width: calc((100% - 49px)/7);
       max-width: 165px;
 
@@ -103,11 +123,9 @@ element {
       }
 
       a {
-        padding: 15px 0;
         color: white;
 
         &:hover {
-          font-weight: 600;
           color: white;
         }
       }
@@ -116,31 +134,18 @@ element {
 }
 
 /* --------------------- HEADER ---------------------*/
-/* header-container e video-container */
+/* Slide de imagens */
 
-.header-container {
-  width: 100%;
-  height: 700px;
-  border-left: none;
-  border-right: none;
-  position: relative;
-  padding: 20px;
-}
+#top-carousel {
+  .item {
+    text-align: center;
 
-.video-container {
-  position: absolute;
-  top: 0%;
-  left: 0%;
-  height: auto;
-  width: 100%;
-}
-
-.header-video {
-  position: absolute;
-  z-index: -1;
-  opacity: 1;
-  width: 100%;
-  box-shadow: 0px 2px 5px #888888;
+    img {
+      width: 100%;
+      max-width: 800px;
+      display: inline-block;
+    }
+  }
 }
 
 /* Título da página */
